--- a/myproject/package.json
+++ b/myproject/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.1.2",
+    "moment": "^2.24.0",
     "video.js": "^7.6.5",
     "vue": "^2.6.10",
     "vue-carousel": "^0.18.0",
