--- a/myproject/package.json
+++ b/myproject/package.json
@@ -8,13 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.1.2",
     "moment": "^2.24.0",
     "video.js": "^7.6.5",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-carousel": "^0.18.0",
     "vue-carousel-3d": "^0.2.0",
     "vue-cookies": "^1.5.13",
+    "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
