--- a/myproject/src/config.json
+++ b/myproject/src/config.json
@@ -1,4 +1,4 @@
 {
-    "analyzer": "http://localhost:9000/",
-    "organizer": "http://localhost:8000/"
+    "analyzer": "http://192.168.43.119:9000/",
+    "organizer": "http://192.168.43.119:8000/"
 }
